--- a/html5up-alpha/index.html
+++ b/html5up-alpha/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alpha by HTML5 UP</title>
+		<title>Jordan Howard Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">Jordan </a> Howard</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<p>Learn about what projects I have completed and what skills I have!</p>
 					<ul class="actions special">
 						<li><a href="#" class="button primary">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
